#
# Copyright (c) 2019 The Aquarium Project Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.
#

buildconfig = "//build/config/BUILDCONFIG.gn"

default_args = {
  clang_use_chrome_plugins = false
  treat_warnings_as_errors = false
}

check_targets = [
  # Everything in BUILD.gn
  "//:*",

  # Everything in third_party/BUILD.gn
  "//third_party/:*",
]
