#
# Copyright (c) 2020 The Aquarium Project Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.
#

gtest_include_multiprocess = true

gtest_include_platform_test = true

gtest_include_objc_support = true

gtest_include_ios_coverage = true
