#
# Copyright (c) 2019 The Aquarium Project Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.
#

shaderc_glslang_dir = "//third_party/glslang"
shaderc_spirv_tools_dir = "//third_party/SPIRV-Tools"
shaderc_spirv_cross_dir = "//third_party/dawn/third_party/"
