#
# Copyright (c) 2020 The Aquarium Project Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.
#

swiftshader_standalone = false

swiftshader_dir = "//third_party/swiftshader"

swiftshader_spirv_tools_dir = "//third_party/vulkan-deps/spirv-tools/src"
